@@ -5,4 +5,4 @@
 *.swp
 *.tdy
 *.tar.gz
-Match-Smart-*
+Smart-Match-*
