@@ -1,4 +1,4 @@
-name    = Match-Smart
+name    = Smart-Match
 author  = Leon Timmermans <leont@cpan.org>
 license = Perl_5
 copyright_holder = Leon Timmermans
