@@ -1,6 +1,7 @@
-Revision history for Match-Smart
+Revision history for Smart-Match
 
 {{$NEXT}}
+    - Renamed from Match-Smart to Smart-Match because Match::Smart was already taken on CPAN
 
 0.001     2011-06-07 12:56:34 Europe/Amsterdam
     - Released to an unexpecting world
